[package]
name = "node-template-runtime"
version = "3.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

pallet-aura = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-balances = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-randomness-collective-flip = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-sudo = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-executive = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", default-features = false, version = "3.0.0"}
sp-consensus-aura = { version = "0.9.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { git = "https://github.com/paritytech/substrate", default-features = false, version = "3.0.0"}
sp-offchain = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-session = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-version = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }

# Used for runtime benchmarking
frame-benchmarking = { version = "3.1.0", default-features = false, git = "https://github.com/paritytech/substrate", optional = true }
frame-system-benchmarking = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate", optional = true }
hex-literal = { version = "0.3.1", optional = true }


[build-dependencies]
substrate-wasm-builder = { version = "4.0.0", git = "https://github.com/paritytech/substrate" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
