[package]
name = "eth-light-client"
version = "0.1.0"
authors = ["byteflyfun <bytefly.fun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate" }
log = {version = "0.4", default-features = false}
# custom
eth-primitives = {package = "eth-types", default-features = false, path = "../../eth-types"}

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-std/std",
    "sp-runtime/std",
    "frame-support/std",
    "frame-system/std",
    "log/std",
]